2008-01-21  Jorge Gonzalez  <jorgegonz@svn.gnome.org>

	* es.po: Updated Spanish translation.
	* Makefile.am: Added es to DOC_LINGUAS

2007-12-31  Yannig Marchegay <yannig@marchegay.org>

	* oc.po: Updated Occitan translation.
2007-11-12  Daniel Nylander <po@danielnylander.se>

	* sv/sv.po: Updated Swedish translation.

2007-10-13  Daniel Nylander <po@danielnylander.se>

	* sv/sv.po: Added Swedish translation.
	* Makefile.am: Added sv to DOC_LINGUAS

2007-08-23  Richard Hughes  <richard@hughsie.com>

	* Initial commit
