@@ -1,0 +1,3 @@
+.svn
+*.mo
+
