@@ -1,3 +1,8 @@
+2008-03-29  Nikos Charonitakis  <nikosx@gmail.com>
+
+	* el.po: Added Greek translation
+	* Makefile.am: Added el to DOC_LINGUAS
+
 2008-01-21  Jorge Gonzalez  <jorgegonz@svn.gnome.org>
 
 	* es.po: Updated Spanish translation.
